# mns

./: .gitignore  Anchor.toml  README.md  index.html  package.json  tsconfig.json
programs/mns_registry/: Cargo.toml
programs/mns_registry/src/: lib.rs
programs/mns_resolver/: Cargo.toml
programs/mns_resolver/src/: lib.rs
tests/: mns_registry.ts
