[package]
name = "mns-registry"
version = "0.1.0"
description = "MNS Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mns_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

